--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fr.infinity54.lol_ultimatebraverytournament",
   "productName": "Gestionnaire de tournoi Ultimate Bravery",
-  "version": "2.5.1",
+  "version": "2.5.2",
   "description": "App used to manage more easily and quickly any Ultimate Bravery Tournament for League of Legends.",
   "license": "CC-BY-SA-4.0",
   "main": ".webpack/main",
@@ -38,7 +38,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
-    "electron-updater": "^6.1.4",
+    "electron-updater": "^6.3.0-alpha.6",
     "jquery": "^3.7.1",
     "tippy.js": "^6.3.7"
   },
