--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
+    "cross-spawn": "^6",
     "electron-updater": "^6.3.0-alpha.6",
     "jquery": "^3.7.1",
     "tippy.js": "^6.3.7"
